backend/vulnerability_analysis/testing/bof2/full/klee-out-0/test000002.external.err
Error: failed external call: __ubsan_handle_divrem_overflow
File: final_tc/bof2_klee.c
Line: 17
assembly.ll line: 8049
State: 8
Stack: 
	#000008049 in obfuscate(139141475991552, 139147918442496, 139672978194432) at final_tc/bof2_klee.c:17
	#100008216 in input_data() at final_tc/bof2_klee.c:31
	#200008242 in __klee_posix_wrapped_main() at final_tc/bof2_klee.c:37
	#300006086 in __user_main(1, 140344603705344, 140344603705360) at src/runtime/POSIX/klee_init_env.c:245
	#400000540 in __uClibc_main(140328824733696, 1, 140344603705344, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#500000705 in main(1, 140344603705344)
